# volebni-kalkulacka-2022

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .prettierignore  ARCHIVE_REFACTORING_COMPARISON.md  Makefile  README.md  VAA_ARCHIVE_MIGRATION_GUIDE.md  package-lock.json  vercel.dev.json
.claude/: archive-migration-notes.md  settings.local.json
.github/: CODEOWNERS
.husky/: pre-commit
backend/: Dockerfile  Dockerfile.aws-lambda  Makefile  README.md  add_images.py  converter.py  enrich_with_pdv.py  main.py  pyproject.toml  pytest.ini
backend/kalkulacka/: foo.py
backend/tests/: test_foo.py
data/: package-lock.json  package.json
frontend/: .env.development  .env.development.local.example  .env.preview  .env.production  .env.test  .env.vercel  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  README.md  cypress.config.js  docker-compose.yaml  env.d.ts  ignored-build-step.sh  index.html  package-lock.json  package.json  parseRestSchemas.cjs  parseRestSchemas.js  parseSchemas.cjs  parseSchemas.js  tsconfig.app.json  tsconfig.json  vercel-build.sh  vercel.json  vite.config.ts
generator/: .dockerignore  Makefile  README.md  converter.py  enrich_with_pdv.py  pyproject.toml  pytest.ini
generator-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json
infrastructure/: README.md  dynamodb.tf
lambda-utils/: Dockerfile  package.json  tsconfig.json
schemas/: README.md  calculator.schema.json  calculators.schema.json  candidate-answer.schema.json  candidate-answers.schema.json  candidate.schema.json  contact.schema.json  (+9 more)
(+1060 files in other folders)
