[tool.poetry]
name = "VolebniKalkulacka2022"
version = "0.1.0"
description = "Volebni kalkulacka 2022"
authors = ["Martin Majlis <martin@majlis.cz>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "~0.75.1"
pydantic = "~1.9.0"
uvicorn = "~0.17.6"

[tool.poetry.dev-dependencies]
pytest = "~7.1.1"
coverage = "~6.3.2"
ddt = "~1.4.4"
mypy = "0.942"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
